# laptop-sync

./: CLAUDE.md  README.md  laptop_sync.yaml  main.py  pyproject.toml
doc/: architecture.md
