[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[project]
name = "laptop-sync"
version = "0.1.0"
description = "Mirror files from a Windows directory to a remote Linux host over SSH"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "rich-click>=1.9.7",
]

[project.scripts]
laptop_sync = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
